--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@lexical/react": "^0.38.2",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.66.5",
@@ -30,6 +31,7 @@
     "better-auth": "^1.3.34",
     "drizzle-kit": "^0.30.0",
     "drizzle-orm": "^0.39.0",
+    "lexical": "^0.38.2",
     "lucide-react": "^0.544.0",
     "pg": "^8.11.0",
     "react": "^19.2.0",
