--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,18 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+  minio:
+    image: minio/minio
+    environment:
+      MINIO_ROOT_USER: your_username
+      MINIO_ROOT_PASSWORD: your_password
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - s3_data:/path/to/minio/data:/data
 
 volumes:
   db_data:
+  s3_data:
