--- a/biome.json
+++ b/biome.json
@@ -8,6 +8,7 @@
 	"files": {
 		"ignoreUnknown": false,
 		"includes": [
+			"**/init_data/**/*",
 			"**/src/**/*",
 			"**/.vscode/**/*",
 			"**/index.html",
