--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "seed" :"node init_data\\createUsers.ts; node init_data\\createCommunity.ts; node init_data\\createPosts.ts",
+    "seed-linux" :"node init_data\\createUsers.ts && node init_data\\createCommunity.ts && node init_data\\createPosts.ts",
+    "seed-windows" :"node init_data\\createUsers.ts; node init_data\\createCommunity.ts; node init_data\\createPosts.ts",
     "dev": "vite dev --port 3000",
     "host": "vite --host --port 3030",
     "build": "vite build",
