--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv": "^16.6.1",
     "drizzle-kit": "^0.31.8",
     "jsdom": "^27.0.0",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tsx": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
